--- a/config-sample.yml
+++ b/config-sample.yml
@@ -1,4 +1,4 @@
-region: <ap-northeast-1>
+region: <aws region>
 source_bucket: <source_bucket>
 destination_bucket: <destination_bucket>
 expires_in: 60
