--- a/config-sample.yml
+++ b/config-sample.yml
@@ -1,4 +1,5 @@
-region: <aws region>
-source_bucket: <source_bucket>
-destination_bucket: <destination_bucket>
+region: <AWS Region>
+language: <Template language>
+source_bucket: <Source Bucket>
+destination_bucket: <Destination Bucket>
 expires_in: 60
