--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint boto3 jinja2 phonenumbers
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
